--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,6 +1,36 @@
-= An Example Quick Course
+= Welcome
 :navtitle: Home
 
-== Introduction
+Welcome to this quick course on the _Introduction to Red{nbsp}Hat OpenShift Data Science (RHODS)_.
+This course is the first in a series of 6 courses about Red{nbsp}Hat OpenShift Data Science:
 
-This is an example quick course demonstrating the usage of Antora for authoring and publishing quick courses.
+*TODO*: Provide link to the other courses when they are ready.
+
+1. Introduction to Red Hat OpenShift Data Science (_This course_)
+2. Data Analysis and Visualization with Red Hat OpenShift Data Science
+3. Creating Machine Learning Models with Red Hat OpenShift Data Science
+4. Deploying Machine Learning Models with Red Hat OpenShift Data Science
+5. Automation using Data Science Pipelines
+6. Red Hat OpenShift Data Science Administration
+
+== Classroom Environment
+
+You will use the TBD catalog item from the Red Hat Demo Platform (https://demo.redhat.com) to run the hands on exercises in this course.
+
+*TODO*: Add actual link to catalog item after discussing with Jaime and the other SMEs.
+
+== Prerequisites
+
+* Basic experience with Red{nbsp}Hat OpenShift
+
+== Objectives
+
+The overall objectives of this course include:
+
+* Become familiar with the general architecture and main features of Red{nbsp}Hat OpenShift Data Science
+* Accessing and logging in to the Red{nbsp}Hat OpenShift Data Science web console
+* Creating, sharing and deleting data science projects
+* Creating a Workbench within a data science project
+* Creating and deleting data connections
+* Creating, importing (from Git repositories) and sharing Jupyter notebooks
+* Install Python packages in your Jupyter notebooks
