--- a/notebooks/data-connections/exercise.ipynb
+++ b/notebooks/data-connections/exercise.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "af95ce32-3c39-452e-8072-b76c5c90eb74",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cda91cce-3afb-49e2-a855-a1e543da2f62",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
    "id": "5e9ad4ba-163b-46ca-b347-a7e563338b47",
    "metadata": {},
    "source": [
-    "Explore some of these variables to verify that the data has been injected"
+    "Explore some of these variables to verify that the data has been injected."
    ]
   },
   {
@@ -70,21 +70,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f648f833-1487-4696-ae8f-7a0bd5511be9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'eu-de'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "region"
    ]
@@ -102,21 +91,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "db3ba01a-6a9b-47bb-ac91-e639bb5de033",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<botocore.client.S3 at 0x7fd596df1070>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s3 = boto3.client(\n",
     "    \"s3\",\n",
@@ -172,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b44d2180-c30f-46f3-b0f4-84d688e34e11",
    "metadata": {},
    "outputs": [],
@@ -185,9 +163,26 @@
   {
    "cell_type": "markdown",
    "id": "0c24cddb-ede1-43d6-b12c-0c994ded2a53",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "You can now open your S3 storage console and verify that the file has been uploaded, by checking that the `hello.txt` object exists in the bucket"
+    "## List the Contents of a Bucket\n",
+    "\n",
+    "Use the `list_objects_v2` of the S3 client and pass the `Bucket` parameter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96431f10-55f8-4b8b-8cb9-f63b98b2df79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "objects = s3.list_objects_v2(Bucket=bucket_name)\n",
+    "\n",
+    "for obj in objects[\"Contents\"]:\n",
+    "    print(obj[\"Key\"])"
    ]
   },
   {
@@ -195,7 +190,7 @@
    "id": "aabc3faf-d89b-4f19-8025-9eb19ca60bd0",
    "metadata": {},
    "source": [
-    "# Download a File"
+    "## Download a File"
    ]
   },
   {
@@ -213,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "16eb6d8c-50fa-483f-876b-68594f6cc251",
    "metadata": {},
    "outputs": [],
@@ -226,23 +221,15 @@
    "id": "1962e606-0c88-440f-9194-7bc6f394d12b",
    "metadata": {},
    "source": [
-    "Verify that the file has been downloaded"
+    "Verify that the file has been downloaded."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "3fa4fc8e-50f5-4ba3-ac2e-e440576e9fc6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-rw-r--r--. 1 1003890000 1003890000 12 Oct 18 08:48 downloaded_hello.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!ls -l downloaded_hello.txt"
    ]
