--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,31 +1,39 @@
-= Welcome
+= Introduction to Red Hat OpenShift Data Science
 :navtitle: Home
 
-Welcome to this quick course on the _Introduction to Red{nbsp}Hat OpenShift Data Science (RHODS)_.
-This course is the first in a series of 6 courses about Red{nbsp}Hat OpenShift Data Science:
-
-*TODO*: Provide link to the other courses when they are ready.
+Welcome to this quick course on the _Red Hat OpenShift Data Science_.
+This course is the first in a series of 6 courses about Red Hat OpenShift Data Science:
 
 1. Introduction to Red Hat OpenShift Data Science (_This course_)
-2. Data Analysis and Visualization with Red Hat OpenShift Data Science
-3. Creating Machine Learning Models with Red Hat OpenShift Data Science
-4. Deploying Machine Learning Models with Red Hat OpenShift Data Science
-5. Automation using Data Science Pipelines
-6. Red Hat OpenShift Data Science Administration
+2. https://redhatquickcourses.github.io/rhods-admin[Red Hat OpenShift Data Science Administration]
+3. https://redhatquickcourses.github.io/rhods-analysis[Data Analysis and Visualization with Red Hat OpenShift Data Science]
+4. https://redhatquickcourses.github.io/rhods-model[Creating Machine Learning Models with Red Hat OpenShift Data Science]
+5. https://redhatquickcourses.github.io/rhods-deploy[Deploying Machine Learning Models with Red Hat OpenShift Data Science]
+6. https://redhatquickcourses.github.io/rhods-pipelines[Automation using Data Science Pipelines]
+
+NOTE: After you have completed all the courses in the learning path, you can attempt the https://github.com/RedHatQuickCourses/rhods-qc-apps/tree/main/7.hands-on-lab["Hit the RHODS"] exercise, that tests your understanding of the concepts taught in all the courses.
+
+== Authors
+
+The PTL team acknowledges the valuable contributions of the following Red Hat associates:
+
+* Jaime Ramirez Castillo
+* Trevor Royer
+* Ravi Srinivasan
 
 == Classroom Environment
 
-You will use the TBD catalog item from the Red Hat Demo Platform (https://demo.redhat.com) to run the hands on exercises in this course.
+This introductory course has a few, simple hands-on labs. You will use the https://demo.redhat.com/catalog?search=openshift+data+science&item=babylon-catalog-prod%2Fsandboxes-gpte.ocp4-workshop-rhods-base-aws.prod[Base RHODS on AWS] catalog item in the Red Hat Demo Platform (RHDP) to run the hands on exercises in this course.
 
-*TODO*: Add actual link to catalog item after discussing with Jaime and the other SMEs.
+This classroom has a pre-installed version of Red Hat OpenShift Data Science on OpenShift. The other courses in the learning path use a different catalog item from RHDP. Inspect the prerequisites and classroom requirements in the respective individual courses.
 
 == Prerequisites
 
-* Basic experience with Red{nbsp}Hat OpenShift
+For this introductory course, basic experience with Red{nbsp}Hat OpenShift is recommended but not mandatory.
 
 == Objectives
 
-The overall objectives of this course include:
+The overall objectives of this introductory course include:
 
 * Become familiar with the general architecture and main features of Red{nbsp}Hat OpenShift Data Science
 * Accessing and logging in to the Red{nbsp}Hat OpenShift Data Science web console
