--- a/notebooks/data-connections/exercise.ipynb
+++ b/notebooks/data-connections/exercise.ipynb
@@ -8,7 +8,7 @@
     "# Connecting to S3 with Data Connections and Boto3\n",
     "\n",
     "This exercise covers the basic use of the `boto3` library, which is the AWS SDK for Python.\n",
-    "This library is included in some workbench images included in RHODS, such as  `Standard Data Science`.\n",
+    "This library is included in some workbench images included in RHOAI, such as  `Standard Data Science`.\n",
     "\n",
     "\n",
     "The parameters required to connect to S3 are injected by the data connnection as environment variables.\n",
