--- a/notebooks/intro-demo/notebook.ipynb
+++ b/notebooks/intro-demo/notebook.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Getting Started: Training a Neural Network to Act as an XOR gate\n",
     "\n",
-    "This is a minimal example about how you can use common data science libraries in RHODS to train an AI model."
+    "This is a minimal example about how you can use common data science libraries in RHOAI to train an AI model."
    ]
   },
   {
