--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -2,14 +2,13 @@
 :navtitle: Home
 
 Welcome to this quick course on the _Introduction to Red Hat OpenShift AI_.
-This course is the first in a series of 6 courses about Red Hat OpenShift AI:
+This course is the *first* in a series of *five* courses about Red Hat OpenShift AI:
 
 1. Introduction to Red Hat OpenShift AI (_This course_)
 2. https://redhatquickcourses.github.io/rhods-admin[Red Hat OpenShift AI Administration]
-3. Data Analysis and Visualization with Red Hat OpenShift AI (Under Development)
-4. https://redhatquickcourses.github.io/rhods-model[Creating Machine Learning Models with Red Hat OpenShift AI]
-5. https://redhatquickcourses.github.io/rhods-deploy[Deploying Machine Learning Models with Red Hat OpenShift AI]
-6. https://redhatquickcourses.github.io/rhods-pipelines[Automation using Data Science Pipelines]
+3. https://redhatquickcourses.github.io/rhods-model[Creating Machine Learning Models with Red Hat OpenShift AI]
+4. https://redhatquickcourses.github.io/rhods-deploy[Deploying Machine Learning Models with Red Hat OpenShift AI]
+5. https://redhatquickcourses.github.io/rhods-pipelines[Automation using Data Science Pipelines]
 
 NOTE: After you have completed all the courses in the learning path, you can attempt the https://github.com/RedHatQuickCourses/rhods-qc-apps/tree/main/7.hands-on-lab["Workshop final hands-on lab"], that tests your understanding of the concepts taught in all the courses.
 
@@ -23,7 +22,7 @@ The PTL team acknowledges the valuable contributions of the following Red Hat as
 
 == Classroom Environment
 
-This introductory course has a few, simple hands-on labs. You will use the https://demo.redhat.com/catalog?search=openshift+data+science&item=babylon-catalog-prod%2Fsandboxes-gpte.ocp4-workshop-rhods-base-aws.prod[Base RHOAI on AWS] catalog item in the Red Hat Demo Platform (RHDP) to run the hands on exercises in this course.
+This introductory course has a few, simple hands-on labs. You will use the https://demo.redhat.com/catalog?search=openshift+data+science&item=babylon-catalog-prod%2Fsandboxes-gpte.ocp4-workshop-rhods-base-aws.prod[Base RHODS on AWS] catalog item in the Red Hat Demo Platform (RHDP) to run the hands on exercises in this course.
 
 This classroom has a pre-installed version of Red Hat OpenShift AI on OpenShift. The other courses in the learning path use a different catalog item from RHDP. Inspect the prerequisites and classroom requirements in the respective individual courses.
 
