change classroom instructions to point to hybrid cloud console and sandbox for both partners and RHT associates

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -22,9 +22,9 @@ The PTL team acknowledges the valuable contributions of the following Red Hat as
 
 == Classroom Environment
 
-This introductory course has a few, simple hands-on labs. You will use the https://demo.redhat.com/catalog?search=openshift+data+science&item=babylon-catalog-prod%2Fsandboxes-gpte.ocp4-workshop-rhods-base-aws.prod[Base RHODS on AWS] catalog item in the Red Hat Demo Platform (RHDP) to run the hands on exercises in this course.
+This introductory course has a few, simple hands-on labs. Provision your own Red Hat OpenShift AI cluster using the Red Hat Hybrid Cloud Console at https://console.redhat.com/application-services/data-science. For a simple, no-cost access to an Red Hat OpenShift AI instance useful for experimentation, click on the "Try it in the sandbox" link and follow the on-screen instructions.
 
-This classroom has a pre-installed version of Red Hat OpenShift AI on OpenShift. The other courses in the learning path use a different catalog item from RHDP. Inspect the prerequisites and classroom requirements in the respective individual courses.
+The other courses in the learning path use a different classroom. Inspect the prerequisites and classroom requirements in the respective individual courses.
 
 == Prerequisites
 
